--- a/PortofolioKazhuro/Views/Home/Index.cshtml
+++ b/PortofolioKazhuro/Views/Home/Index.cshtml
@@ -193,7 +193,7 @@
                     @foreach (var edu in Model.educations)
                     {
                         <tr>
-                            <td>@edu.name</td>
+                            <td>@edu.Institution</td>
                             <td>@edu.DateStart?.ToString("yyyy-MM-dd")</td>
                             <td>@edu.DateEnd?.ToString("yyyy-MM-dd")</td>
                         </tr>
