--- a/PortofolioKazhuro/Views/Admin/Index.cshtml
+++ b/PortofolioKazhuro/Views/Admin/Index.cshtml
@@ -180,6 +180,18 @@
                                             <input asp-for="Profile.TelegramUrl" class="form-control" placeholder="Telegram" />
                                         </div>
                                     </div>
+                                    <div class="col-6 col-md-3">
+                                        <div class="input-group has-validation">
+                                            <span class="input-group-text"><i class="fab fa-telegram"></i></span>
+                                            <input asp-for="Profile.TelegramTokenBot" class="form-control" placeholder="Telegram Token Bot" />
+                                        </div>
+                                    </div>
+                                    <div class="col-6 col-md-3">
+                                        <div class="input-group has-validation">
+                                            <span class="input-group-text"><i class="fab fa-telegram"></i></span>
+                                            <input asp-for="Profile.TelegramChatIdBot" class="form-control" placeholder="Telegram Чат ID" />
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
